# faved_poc

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_endpoint.py
backend/: config.py  main.py  utils.py
backend/api/: evaluate_image.py  evaluate_text.py  evaluate_video.py
data/: brief_prompt_questions.json
data/brief/: 084ed5a5-8023-4ea1-acd5-e7678f11e8c8.txt  1bdbaa59-fda5-48de-8c25-596d214541da.txt  235d89bd-1ff3-4fbd-bdad-1b170c23b41c.txt  272e725f-236b-47f3-898e-a852fae8dbd5.txt  3ee32f57-aad2-4b5f-aaa4-fa55257e5e8c.txt  440c6752-5fc6-4eb0-89c0-b515111d5f9a.txt  52740caf-252a-4e09-8e6b-b47fcdc31e09.txt  5764f7d9-33cd-4736-8e3a-2c0376ee0190.txt  60a3ef8d-cfde-436a-9a37-fdc6d52f1ea0.txt  67de9058-d460-42b9-9d3d-84830ef3080d.txt  71838fc4-c0a2-4303-a7cf-4b6274990d53.txt  724bb30b-2c38-48f8-b011-64b8b8358e91.txt  987666c6-7d6e-49fe-8386-f96d8c786776.txt  9bf9728a-3873-4152-9706-30460765558e.txt  9f377c0b-e87a-4198-b54d-8255726e8d8e.txt  a1c7be27-952e-4599-9cb9-549cf1a115da.txt  b09a58b6-c418-4227-8253-294e6700896a.txt  b2567b32-c002-4bdd-8d79-74807e1888ef.txt  b6bf5595-9c5c-49f0-8710-df2a06338dbf.txt  b96acf92-4a03-4835-9594-077e7b3a89ff.txt  bd4fff49-6674-4863-bf2c-5b654d30e673.txt  c7698d12-71cc-41e3-a9f7-bc48d04d9a19.txt  dac938b0-3e1a-4eba-aff7-54e377dd4bbe.txt  e045ddaf-1d6e-493b-90b5-c3b4ca6e7647.txt  (+3 more)
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  (+2 more)
scripts/: __init__.py  delete_index.py  evaluate_image.py  evaluate_text.py  evaluate_video.py  generate_prompts.py  summarise_briefs.py  vectorstore.py
(+6 files in other folders)
